@@ -1,5 +1,6 @@
 package org.productivity.java.syslog4j;
 
+import java.io.Serial;
 import java.util.Hashtable;
 import java.util.Iterator;
 import java.util.Map;
@@ -36,11 +37,11 @@ import org.productivity.java.syslog4j.util.SyslogUtility;
  * @version $Id: Syslog.java,v 1.23 2011/01/23 20:49:12 cvs Exp $
  */
 public final class Syslog implements SyslogConstants {
-	private static final long serialVersionUID = -4662318148650646144L;
+	@Serial private static final long serialVersionUID = -4662318148650646144L;
 	
 	private static boolean SUPPRESS_RUNTIME_EXCEPTIONS = false;
 	
-	protected static final Map instances = new Hashtable();
+	private static final Map<String, SyslogIF> instances = new Hashtable<>();
 	
 	static {
 		initialize();
@@ -56,7 +57,7 @@ public final class Syslog implements SyslogConstants {
 	/**
 	 * @return Returns the current version identifier for Syslog4j.
 	 */
-	public static final String getVersion() {
+	public static String getVersion() {
 		return Syslog4jVersion.VERSION;
 	}
 	
@@ -82,10 +83,9 @@ public final class Syslog implements SyslogConstants {
 	 */
 	private static void throwRuntimeException(String message) throws SyslogRuntimeException {
 		if (SUPPRESS_RUNTIME_EXCEPTIONS) {
-			return;
-			
-		} else {
-			throw new SyslogRuntimeException(message.toString());
+
+        } else {
+			throw new SyslogRuntimeException(message);
 		}		
 	}
 
@@ -96,21 +96,21 @@ public final class Syslog implements SyslogConstants {
 	 * @return Returns an instance of SyslogIF.
 	 * @throws SyslogRuntimeException
 	 */
-	public static final SyslogIF getInstance(String protocol) throws SyslogRuntimeException {
+	public static SyslogIF getInstance(String protocol) throws SyslogRuntimeException {
 		String _protocol = protocol.toLowerCase();
 		
 		if (instances.containsKey(_protocol)) {
-			return (SyslogIF) instances.get(_protocol);
+			return instances.get(_protocol);
 			
 		} else {
-			StringBuffer message = new StringBuffer("Syslog protocol \"" + protocol + "\" not defined; call Syslogger.createSyslogInstance(protocol,config) first");
+			StringBuilder message = new StringBuilder("Syslog protocol \"" + protocol + "\" not defined; call Syslogger.createSyslogInstance(protocol,config) first");
 			
-			if (instances.size() > 0) {
+			if (!instances.isEmpty()) {
 				message.append(" or use one of the following instances: ");
 				
-				Iterator i = instances.keySet().iterator();
+				Iterator<String> i = instances.keySet().iterator();
 				while (i.hasNext()) {
-					String k = (String) i.next();
+					String k = i.next();
 				
 					message.append(k);
 					if (i.hasNext()) {
@@ -142,8 +142,8 @@ public final class Syslog implements SyslogConstants {
 	 * @return Returns an instance of SyslogIF.
 	 * @throws SyslogRuntimeException
 	 */
-	public static final SyslogIF createInstance(String protocol, SyslogConfigIF config) throws SyslogRuntimeException {
-		if (protocol == null || "".equals(protocol.trim())) {
+	public static SyslogIF createInstance(String protocol, SyslogConfigIF config) throws SyslogRuntimeException {
+		if (protocol == null || protocol.trim().isEmpty()) {
 			throwRuntimeException("Instance protocol cannot be null or empty");
 			return null;
 		}
@@ -155,7 +155,7 @@ public final class Syslog implements SyslogConstants {
 		
 		String syslogProtocol = protocol.toLowerCase();
 		
-		SyslogIF syslog = null;
+		SyslogIF syslog;
 		
 		synchronized(instances) {
 			if (instances.containsKey(syslogProtocol)) {
@@ -164,38 +164,21 @@ public final class Syslog implements SyslogConstants {
 			}
 			
 			try {
-				Class syslogClass = config.getSyslogClass();
+				Class<?> syslogClass = config.getSyslogClass();
 				
-				syslog = (SyslogIF) syslogClass.newInstance();
+				syslog = (SyslogIF) syslogClass.getDeclaredConstructor().newInstance();
 				
-			} catch (ClassCastException cse) {
+			} catch (ReflectiveOperationException cse) {
 				if (!config.isThrowExceptionOnInitialize()) {
 					throw new SyslogRuntimeException(cse);
-					
-				} else {
-					return null;
-				}
-				
-			} catch (IllegalAccessException iae) {
-				if (!config.isThrowExceptionOnInitialize()) {
-					throw new SyslogRuntimeException(iae);
-					
-				} else {
-					return null;
-				}
-				
-			} catch (InstantiationException ie) {
-				if (!config.isThrowExceptionOnInitialize()) {
-					throw new SyslogRuntimeException(ie);
-					
 				} else {
 					return null;
 				}
 			}
-	
-			syslog.initialize(syslogProtocol,config);
+
+            syslog.initialize(syslogProtocol,config);
 			
-			instances.put(syslogProtocol,syslog);
+			instances.put(syslogProtocol, syslog);
 		}
 
 		return syslog;
@@ -205,13 +188,11 @@ public final class Syslog implements SyslogConstants {
 	 * initialize() sets up the default TCP and UDP Syslog protocols, as
 	 * well as UNIX_SYSLOG and UNIX_SOCKET (if running on a Unix-based system).
 	 */
-	public synchronized static final void initialize() {
+	public synchronized static void initialize() {
 		createInstance(UDP,new UDPNetSyslogConfig());
 		createInstance(TCP,new TCPNetSyslogConfig());
 		
-		if (OSDetectUtility.isUnix()
-			&& SyslogUtility.isClassExists(JNA_NATIVE_CLASS)
-			&& !Boolean.getBoolean(DISABLE_UNIX_PROPERTY)) {
+		if (OSDetectUtility.isUnix() && SyslogUtility.isClassExists(JNA_NATIVE_CLASS)) {
 			createInstance(UNIX_SYSLOG,new UnixSyslogConfig());
 			createInstance(UNIX_SOCKET,new UnixSocketSyslogConfig());
 		}
@@ -221,8 +202,8 @@ public final class Syslog implements SyslogConstants {
 	 * @param protocol - Syslog protocol
 	 * @return Returns whether the protocol has been previously defined.
 	 */
-	public static final boolean exists(String protocol) {
-		if (protocol == null || "".equals(protocol.trim())) {
+	public static boolean exists(String protocol) {
+		if (protocol == null || protocol.trim().isEmpty()) {
 			return false;
 		}
 		
@@ -234,18 +215,18 @@ public final class Syslog implements SyslogConstants {
 	 * which includes flushing all queues and connections and finally
 	 * clearing all instances (including those initialized by default).
 	 */
-	public synchronized static final void shutdown() {
-		Set protocols = instances.keySet();
+	public synchronized static void shutdown() {
+		Set<String> protocols = instances.keySet();
 		
-		if (protocols.size() > 0) {
-			Iterator i = protocols.iterator();
+		if (!protocols.isEmpty()) {
+			Iterator<String> i = protocols.iterator();
 			
 			SyslogUtility.sleep(SyslogConstants.THREAD_LOOP_INTERVAL_DEFAULT);
 			
 			while(i.hasNext()) {
-				String protocol = (String) i.next();
+				String protocol = i.next();
 				
-				SyslogIF syslog = (SyslogIF) instances.get(protocol);
+				SyslogIF syslog = instances.get(protocol);
 	
 				syslog.shutdown();
 			}
@@ -261,8 +242,8 @@ public final class Syslog implements SyslogConstants {
 	 * @param protocol - the Syslog protocol to destroy
 	 * @throws SyslogRuntimeException
 	 */
-	public synchronized static final void destroyInstance(String protocol) throws SyslogRuntimeException {
-		if (protocol == null || "".equals(protocol.trim())) {
+	public synchronized static void destroyInstance(String protocol) throws SyslogRuntimeException {
+		if (protocol == null || protocol.trim().isEmpty()) {
 			return;
 		}
 		
@@ -271,7 +252,7 @@ public final class Syslog implements SyslogConstants {
 		if (instances.containsKey(_protocol)) {
 			SyslogUtility.sleep(SyslogConstants.THREAD_LOOP_INTERVAL_DEFAULT);
 			
-			SyslogIF syslog = (SyslogIF) instances.get(_protocol);
+			SyslogIF syslog = instances.get(_protocol);
 
 			try {
 				syslog.shutdown();
@@ -282,8 +263,7 @@ public final class Syslog implements SyslogConstants {
 			
 		} else {
 			throwRuntimeException("Cannot destroy protocol \"" + protocol + "\" instance; call shutdown instead");
-			return;
-		}
+        }
 	}
 
 	/**
@@ -293,7 +273,7 @@ public final class Syslog implements SyslogConstants {
 	 * @param syslog - the Syslog instance to destroy
 	 * @throws SyslogRuntimeException
 	 */
-	public synchronized static final void destroyInstance(SyslogIF syslog) throws SyslogRuntimeException {
+	public synchronized static void destroyInstance(SyslogIF syslog) throws SyslogRuntimeException {
 		if (syslog == null) {
 			return;
 		}
@@ -310,12 +290,10 @@ public final class Syslog implements SyslogConstants {
 			
 		} else {
 			throwRuntimeException("Cannot destroy protocol \"" + protocol + "\" instance; call shutdown instead");
-			return;
-		}
+        }
 	}
 
 	public static void main(String[] args) throws Exception {
 		SyslogMain.main(args);
 	}
-
 }
