@@ -1,7 +1,7 @@
 package org.productivity.java.syslog4j.server;
 
+import java.io.Serial;
 import java.util.Hashtable;
-import java.util.Iterator;
 import java.util.Map;
 import java.util.Set;
 
@@ -24,11 +24,11 @@ import org.productivity.java.syslog4j.util.SyslogUtility;
  * @version $Id: SyslogServer.java,v 1.14 2011/01/23 20:49:12 cvs Exp $
  */
 public class SyslogServer implements SyslogConstants {
-	private static final long serialVersionUID = -2260889360828258602L;
+	@Serial private static final long serialVersionUID = -2260889360828258602L;
 
 	private static boolean SUPPRESS_RUNTIME_EXCEPTIONS = false;
 
-	protected static final Map instances = new Hashtable();
+	protected static final Map<String, SyslogServerIF> instances = new Hashtable<>();
 	
 	static {
 		initialize();
@@ -41,7 +41,7 @@ public class SyslogServer implements SyslogConstants {
 	/**
 	 * @return Returns the current version identifier for Syslog4j.
 	 */
-	public static final String getVersion() {
+	public static String getVersion() {
 		return Syslog4jVersion.VERSION;
 	}
 
@@ -68,18 +68,17 @@ public class SyslogServer implements SyslogConstants {
 	 */
 	private static void throwRuntimeException(String message) throws SyslogRuntimeException {
 		if (SUPPRESS_RUNTIME_EXCEPTIONS) {
-			return;
-			
-		} else {
-			throw new SyslogRuntimeException(message.toString());
+
+        } else {
+			throw new SyslogRuntimeException(message);
 		}		
 	}
 
-	public static final SyslogServerIF getInstance(String protocol) throws SyslogRuntimeException {
+	public static SyslogServerIF getInstance(String protocol) throws SyslogRuntimeException {
 		String syslogProtocol = protocol.toLowerCase();
 		
 		if (instances.containsKey(syslogProtocol)) {
-			return (SyslogServerIF) instances.get(syslogProtocol);
+			return instances.get(syslogProtocol);
 			
 		} else {
 			throwRuntimeException("SyslogServer instance \"" + syslogProtocol + "\" not defined; use \"tcp\" or \"udp\" or call SyslogServer.createInstance(protocol,config) first");
@@ -87,7 +86,7 @@ public class SyslogServer implements SyslogConstants {
 		}
 	}
 	
-	public static final SyslogServerIF getThreadedInstance(String protocol) throws SyslogRuntimeException {
+	public static SyslogServerIF getThreadedInstance(String protocol) throws SyslogRuntimeException {
 		SyslogServerIF server = getInstance(protocol);
 
 		if (server.getThread() == null) {
@@ -105,16 +104,16 @@ public class SyslogServer implements SyslogConstants {
 		return server;
 	}
 	
-	public static final boolean exists(String protocol) {
-		if (protocol == null || "".equals(protocol.trim())) {
+	public static boolean exists(String protocol) {
+		if (protocol == null || protocol.trim().isEmpty()) {
 			return false;
 		}
 		
 		return instances.containsKey(protocol.toLowerCase());
 	}
 	
-	public static final SyslogServerIF createInstance(String protocol, SyslogServerConfigIF config) throws SyslogRuntimeException {
-		if (protocol == null || "".equals(protocol.trim())) {
+	public static SyslogServerIF createInstance(String protocol, SyslogServerConfigIF config) throws SyslogRuntimeException {
+		if (protocol == null || protocol.trim().isEmpty()) {
 			throwRuntimeException("Instance protocol cannot be null or empty");
 			return null;
 		}
@@ -126,7 +125,7 @@ public class SyslogServer implements SyslogConstants {
 		
 		String syslogProtocol = protocol.toLowerCase();
 		
-		SyslogServerIF syslogServer = null;
+		SyslogServerIF syslogServer;
 		
 		synchronized(instances) {
 			if (instances.containsKey(syslogProtocol)) {
@@ -135,38 +134,30 @@ public class SyslogServer implements SyslogConstants {
 			}
 			
 			try {
-				Class syslogClass = config.getSyslogServerClass();
+				Class<?> syslogClass = config.getSyslogServerClass();
 				
-				syslogServer = (SyslogServerIF) syslogClass.newInstance();
+				syslogServer = (SyslogServerIF) syslogClass.getDeclaredConstructor().newInstance();
 				
-			} catch (ClassCastException cse) {
+			} catch (ReflectiveOperationException cse) {
 				throw new SyslogRuntimeException(cse);
 				
-			} catch (IllegalAccessException iae) {
-				throw new SyslogRuntimeException(iae);
-				
-			} catch (InstantiationException ie) {
-				throw new SyslogRuntimeException(ie);
 			}
-	
-			syslogServer.initialize(syslogProtocol,config);
+            syslogServer.initialize(syslogProtocol,config);
 			
-			instances.put(syslogProtocol,syslogServer);
+			instances.put(syslogProtocol, syslogServer);
 		}
 
 		return syslogServer;
 	}
 
-	public static final SyslogServerIF createThreadedInstance(String protocol, SyslogServerConfigIF config) throws SyslogRuntimeException {
+	public static SyslogServerIF createThreadedInstance(String protocol, SyslogServerConfigIF config) throws SyslogRuntimeException {
 		createInstance(protocol,config);
-		
-		SyslogServerIF server = getThreadedInstance(protocol); 
-		
-		return server;
+
+        return getThreadedInstance(protocol);
 	}
 
-	public synchronized static final void destroyInstance(String protocol) {
-		if (protocol == null || "".equals(protocol.trim())) {
+	public synchronized static void destroyInstance(String protocol) {
+		if (protocol == null || protocol.trim().isEmpty()) {
 			return;
 		}
 
@@ -175,7 +166,7 @@ public class SyslogServer implements SyslogConstants {
 		if (instances.containsKey(_protocol)) {
 			SyslogUtility.sleep(SyslogConstants.THREAD_LOOP_INTERVAL_DEFAULT);
 			
-			SyslogServerIF syslogServer = (SyslogServerIF) instances.get(_protocol);
+			SyslogServerIF syslogServer = instances.get(_protocol);
 
 			try {
 				syslogServer.shutdown();
@@ -186,11 +177,10 @@ public class SyslogServer implements SyslogConstants {
 			
 		} else {
 			throwRuntimeException("Cannot destroy server protocol \"" + protocol + "\" instance; call shutdown instead");
-			return;
-		}
+        }
 	}
 	
-	public synchronized static final void destroyInstance(SyslogServerIF syslogServer) {
+	public synchronized static void destroyInstance(SyslogServerIF syslogServer) {
 		if (syslogServer == null) {
 			return;
 		}
@@ -217,18 +207,15 @@ public class SyslogServer implements SyslogConstants {
 		createInstance(TCP,new TCPNetSyslogServerConfig());
 	}
 	
-	public synchronized static final void shutdown() throws SyslogRuntimeException {
-		Set protocols = instances.keySet();
-		
-		Iterator i = protocols.iterator();
-		
-		while(i.hasNext()) {
-			String protocol = (String) i.next();
-			
-			SyslogServerIF syslogServer = (SyslogServerIF) instances.get(protocol);
+	public synchronized static void shutdown() throws SyslogRuntimeException {
+		Set<String> protocols = instances.keySet();
 
-			syslogServer.shutdown();
-		}
+        for (String protocol : protocols) {
+
+            SyslogServerIF syslogServer = instances.get(protocol);
+
+            syslogServer.shutdown();
+        }
 
 		instances.clear();
 	}
